# marker

./: pyproject.toml
marker/: convert.py  markdown.py
scripts/install/: ghostscript_install.sh
