[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ["marker*"]
packages.find.exclude = [
    "convert.py",
    "convert_single.py",
    "benchmark.py",
    "chunk_convert.py",
]

[project]
name = "marker-pdf"
version = "0.1.1"
requires-python = ">= 3.9, < 3.13"
description = "Convert PDF to markdown with high speed and accuracy."
authors = [{ name = "Vik Paruchuri", email = "github@vikas.sh" }]
readme = "README.md"
# license = "GPL-3.0-or-later"
# repository = "https://github.com/VikParuchuri/marker"
keywords = ["pdf", "markdown", "ocr", "nlp"]
dependencies = [
    "scikit-learn >= 1.3.2, < 2.0.0",
    "Pillow >= 10.1.0, < 11.0.0",
    "pytesseract >= 0.3.10, < 0.4.0",
    "PyMuPDF >= 1.23.5, < 2.0.0",
    "pymupdf-fonts >= 1.0.5, < 2.0.0",
    "pydantic >= 2.4.2, < 3.0.0",
    "pydantic-settings >= 2.0.3",
    "nougat-ocr >= 0.1.17",
    "transformers >= 4.34.1",
    "numpy >= 1.26.1",
    "python-dotenv >= 1.0.0",
    "torch == 2.1.1",
    "ray == 2.7.1",
    "tqdm >= 4.66.1",
    "tabulate >= 0.9.0",
    "thefuzz >= 0.20.0",
    "python-magic >= 0.4.27",
    "pyspellchecker >= 0.7.2",
    "ftfy >= 6.1.1",
    "nltk >= 3.8.1",
    "ocrmypdf >= 15.4.0",
    "bitsandbytes >= 0.41.2.post2",
    "grpcio >= 1.60.0",
]


[project.optional-dependencies]
dev = ["jupyter >= 1.0.0"]

[project.scripts]
marker = "convert:main"
marker_single = "convert_single:main"
marker_benchmark = "benchmark:main"
marker_chunk_convert = "chunk_convert:main"
